another round of fixes for trainer battling